# 5G-IoT-Edge-Gateway

./: .env.example  .gitignore  Makefile  ReadMe.md  Readme.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  start.sh
dashboard/: Dockerfile  app.py
dashboard/templates/: index.html
deploy/docker/: python-base.Dockerfile  spark-base.Dockerfile
deploy/k3s/: kustomization.yaml  namespace.yaml
docs/: system-design.md
docs/increments/: increment-01-simple-gateway.md  increment-02-communication.md  increment-03-consensus.md  increment-04-scalability.md  increment-05-replication.md  increment-06-scheduling.md  increment-07-architecture.md  increment-08-middleware.md  increment-09-cloud.md  increment-10-bigdata.md  increment-11-distributed-ml.md  increment-12-continuum.md
scripts/: build-images.sh  deploy-edge.sh  generate-protos.sh  run-local.sh  setup-dev.sh  train-baseline-model.sh
services/batch-analytics/: Dockerfile  pyproject.toml
services/batch-analytics/batch_analytics/: config.py  main.py
services/batch-analytics/batch_analytics/routers/: health.py  jobs.py  results.py
services/batch-analytics/batch_analytics/services/: job_runner.py  result_store.py  spark_manager.py
services/batch-analytics/batch_analytics/spark_jobs/: anomaly_report.py  device_health.py  sensor_aggregation.py  trend_analysis.py
services/cloud-api/: Dockerfile  pyproject.toml
services/cloud-api/cloud_api/: config.py  main.py
services/cloud-api/cloud_api/grpc_server/: server.py  telemetry_servicer.py
services/cloud-api/cloud_api/routers/: analytics.py  devices.py  health.py  models.py  telemetry.py
services/cloud-api/cloud_api/services/: analytics_service.py  model_registry.py  telemetry_service.py
services/coordination/: Dockerfile  pyproject.toml
services/coordination/coordination/: config.py  main.py
services/coordination/coordination/grpc_server/: coordination_servicer.py  server.py
services/coordination/coordination/services/: config_sync.py  gossip.py  heartbeat.py  leader_election.py  ota_coordinator.py
services/coordination/coordination/state/: cluster_state.py  version_vector.py
services/data-ingestion/: Dockerfile  pyproject.toml
services/data-ingestion/data_ingestion/: config.py  main.py
services/data-ingestion/data_ingestion/codecs/: __init__.py  cbor_codec.py  json_codec.py  protobuf_codec.py
services/data-ingestion/data_ingestion/routers/: coap_server.py  ingest.py
services/data-ingestion/data_ingestion/services/: ingestion_service.py  mqtt_subscriber.py
services/data-ingestion/data_ingestion/validators/: telemetry_validator.py
services/data-persistence/: Dockerfile  pyproject.toml
services/data-persistence/data_persistence/: config.py  main.py
services/data-persistence/data_persistence/db/: models.py
services/data-persistence/data_persistence/services/: batch_writer.py
services/data-persistence/data_persistence/workers/: stream_to_postgres.py
services/device-manager/: Dockerfile  pyproject.toml
services/device-manager/device_manager/: config.py  main.py
services/device-manager/device_manager/db/: models.py
services/device-manager/device_manager/repositories/: device_repo.py
services/device-manager/device_manager/routers/: devices.py  firmware.py  provisioning.py
services/device-manager/device_manager/services/: device_service.py  firmware_service.py  provision_service.py
services/middleware/: Dockerfile  pyproject.toml
services/middleware/middleware/: config.py  main.py
services/middleware/middleware/middleware_layers/: authentication.py  correlation_id.py  error_handler.py  rate_limiter.py  request_logger.py
services/middleware/middleware/routers/: auth.py  health.py  proxy.py
services/middleware/middleware/services/: auth_service.py
services/ml-inference/: Dockerfile  pyproject.toml
services/ml-inference/ml_inference/: config.py  main.py
services/ml-inference/ml_inference/models/: export_onnx.py  isolation_forest.py
services/ml-inference/ml_inference/routers/: inference.py  models.py
services/ml-inference/ml_inference/services/: anomaly_detector.py  feature_extractor.py  inference_engine.py  model_manager.py
services/ml-training/: Dockerfile  pyproject.toml
services/ml-training/ml_training/: __init__.py  config.py  main.py
services/ml-training/ml_training/architectures/: __init__.py  autoencoder.py  lstm_predictor.py
services/ml-training/ml_training/routers/: __init__.py  experiments.py  health.py  training_jobs.py
services/ml-training/ml_training/services/: __init__.py  data_loader.py  experiment_tracker.py  model_exporter.py  trainer.py
services/ml-training/ml_training/training_scripts/: __init__.py  evaluate.py  train_anomaly.py
services/scheduler/: Dockerfile  pyproject.toml
services/scheduler/scheduler/: __init__.py  config.py  main.py
services/scheduler/scheduler/policies/: __init__.py  balanced.py  cost_aware.py  latency_first.py
services/scheduler/scheduler/routers/: __init__.py  health.py  resources.py  tasks.py
services/scheduler/scheduler/services/: __init__.py  adaptive_scheduler.py  placement_policy.py  resource_monitor.py  scheduler_engine.py
shared/: pyproject.toml
shared/shared/: __init__.py  config.py
shared/shared/auth/: __init__.py  jwt_handler.py
shared/shared/database/: __init__.py  postgres.py  redis_client.py
shared/shared/grpc_utils/: __init__.py
shared/shared/models/: __init__.py  alert.py  device.py  telemetry.py
shared/shared/observability/: __init__.py  logging_config.py  metrics.py
shared/shared/streams/: __init__.py  constants.py
shared/shared/utils/: health.py
simulator/: Dockerfile  pyproject.toml
simulator/simulator/: config.py  fleet_manager.py  main.py
simulator/simulator/devices/: base_device.py  pressure_sensor.py  temperature_sensor.py  vibration_sensor.py
simulator/simulator/generators/: anomaly_data.py  normal_data.py
simulator/simulator/scenarios/: factory_floor.py
simulator/simulator/transport/: coap_client.py  mqtt_publisher.py  rest_client.py
tests/: Dockerfile  conftest.py
(+37 files in other folders)
