[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-simulator"
version = "0.1.0"
description = "IoT Device Simulator for the 5G IoT Edge Gateway project"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["simulator*"]

[tool.ruff]
target-version = "py311"
line-length = 100
