[project]
name = "data-persistence"
version = "0.1.0"
description = "Data Persistence Worker - consumes telemetry from Redis Streams and batch-writes to PostgreSQL"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_persistence*"]
