[project]
name = "ml-inference"
version = "0.1.0"
description = "Edge-side real-time anomaly detection using ONNX Runtime"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "onnxruntime>=1.16.0",
    "scikit-learn>=1.3.0",
    "skl2onnx>=1.16.0",
    "numpy>=1.26.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["ml_inference*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Local path dependency -- install with:
#   pip install -e ../../shared && pip install -e .
# In Docker, the shared lib is installed first (see Dockerfile).
[tool.pip.local-dependencies]
shared = {path = "../../shared"}
